# neural-retrieval

./: .gitignore  README.md  pyproject.toml
api/: main.py
benchmarks/: SCHEMA.md  methodology.md
benchmarks/results/: 20260420T212045Z_0_2384d8be.json  20260424T213429Z_1A_7a10b5d9.json  20260425T165752Z_1B_bd753f2b.json  20260425T172427Z_1C_5133355b.json  20260425T182414Z_1D_cb5f8961.json  20260425T183953Z_1E_6e17262b.json  20260426T081538Z_1B_737c4823.json  20260426T220729Z_1A_586f1455.json  20260426T221015Z_1E_6e17262b.json  20260426T223603Z_1B_bd753f2b.json  20260426T223755Z_1C_5133355b.json  20260427T152658Z_pq_ceiling_m32.json  20260427T152827Z_pq_ceiling_sq8.json  20260427T155356Z_hybrid_5133355b.json  locust_10u_stats.csv  locust_10u_stats_history.csv  locust_1u_stats.csv  locust_1u_stats_history.csv  locust_25u_stats.csv  locust_25u_stats_history.csv  locust_50u_stats.csv  locust_50u_stats_history.csv  locust_5u_stats.csv  locust_5u_stats_history.csv
data/: prepare_msmarco.py
docs/: design_decisions.md  failure_modes.md  faiss_as_storage_engine.md  why_not_elasticsearch.md
evaluation/: acl_eval.py  bm25_eval.py  bm25s_baseline.py  build_faiss.py  build_faiss_flat.py  dense_eval.py  encode_corpus.py  hybrid_eval.py  latency_report.py  metrics.py  pq_ceiling_experiment.py  trec_eval.py
retrieval/: acl.py  chunker.py
retrieval/dense/: __init__.py  encoder.py  faiss_index.py  lookup.py  recovery.py
retrieval/fusion/: __init__.py  rrf.py
retrieval/inverted_index/: __init__.py  bm25.py  index.py  persistence.py  vbyte.py  (+1 more)
scripts/: bootstrap_data.sh
(+18 files in other folders)
